--- a/demo.html
+++ b/demo.html
@@ -11,7 +11,7 @@
   <script src="./oneko-ie6.js"></script>
 <![endif]-->
 <!--[if !IE]><!-->
-  <script src="./oniko.js"></script>
+  <script src="./scripts/oniko.js"></script>
 <!--<![endif]-->
 </body>
 </html>
