--- a/demo.html
+++ b/demo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="X-UA-Compatible">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>oniko.js</title>
 </head>
@@ -11,7 +11,7 @@
   <script src="./oneko-ie6.js"></script>
 <![endif]-->
 <!--[if !IE]><!-->
-  <script src="./scripts/oniko.js"></script>
+  <script src="scripts/oniko.js"></script>
 <!--<![endif]-->
 </body>
 </html>
